// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component matches the snapshot of the main menu 1`] = `
<DocumentFragment>
  <div
    class="Menu"
  >
    <div
      class="Menu-options"
    >
      <button
        class="Button regular"
        style="border-color: #89eb0a;"
      >
        <img
          alt=""
          src="file"
        />
        ART GAMES
      </button>
      <button
        class="Button regular"
        style="border-color: #ffe81a;"
      >
        <img
          alt=""
          src="file"
        />
        MUSIC GAMES
      </button>
      <button
        class="Button regular"
        style="border-color: #fd4d3a;"
      >
        <img
          alt=""
          src="file"
        />
        ALL GAMES
      </button>
      <button
        class="Button regular"
        style="border-color: #4d4f5e;"
      >
        <img
          alt=""
          src="file"
        />
        IEP GOALS
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu component renders art games 1`] = `
<button
  class="Button regular"
  style="border-color: #89eb0a;"
>
  <img
    alt=""
    src="file"
  />
  COLOR THEORY
</button>
`;

exports[`Menu component renders music games 1`] = `
<button
  class="Button regular"
  style="border-color: #4d4f5e;"
>
  <img
    alt=""
    src="file"
  />
  SEQUENCE MAKER
</button>
`;
